--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                             <p>
                                 You can automatically get notifications when the waiting period is over and check out the item. You can use the waiting period to review the products directly in the app and make informed decisions.
                             </p>
-                            <p>More info: <a href="https://sleeponit.technovaitsolutions.com/">https://sleeponit.technovaitsolutions.com/</a></p>
+                            <p>More info: <a href="https://sleeponit.technovaitsolutions.com/" target="_blank">Sleep On It!</a></p>
                             <p>
                                 <a href="https://itunes.apple.com/gb/app/sleep-on-it!/id1134114558">
                                     <img class="alignright" alt="apple app store" src="img/btn-app-store-3.png" width="167" height="50" />
@@ -151,7 +151,7 @@
                             <p>
                                 With NoteMap, you can enter a descriptive text in your note and attach as many photos as you want. This way you know when, where and why you took the photos.
                             </p>
-                            <p>More info: <a href="https://notemap.technovaitsolutions.com">https://notemap.technovaitsolutions.com</a>  </p>
+                            <p>More info: <a href="https://notemap.technovaitsolutions.com" target="_blank">NoteMap</a>  </p>
                             <p>
                                 <a href="https://itunes.apple.com/gb/app/NoteMap/id1091333985">
                                     <img class="alignright" alt="apple app store" src="img/btn-app-store-3.png" width="167" height="50" />
